Made limit for max changes to 2^31-1

--- a/worldedit.properties
+++ b/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Sun Jun 20 23:32:21 EDT 2021
+#Mon Jun 21 00:29:32 EDT 2021
 max-super-pickaxe-size=5
 use-inventory-creative-override=true
 use-inventory-override=false
@@ -13,7 +13,7 @@ max-calculation-timeout=300
 history-size=15
 super-pickaxe-drop-items=true
 default-max-polygon-points=-1
-max-changed-blocks=-1
+max-changed-blocks=2147483647
 scripting-timeout=3000
 calculation-timeout=100
 nav-use-glass=true
