Initial commit to new branch

--- a/worldedit.properties
+++ b/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Wed Aug 17 05:44:50 EDT 2022
+#Sat Dec 31 01:50:51 EST 2022
 max-super-pickaxe-size=5
 use-inventory-creative-override=false
 use-inventory-override=false
